# test-package

./: .gitignore  README.md  pyproject.toml
nrdp_sppy/: __init__.py  main.py
