[project]
name = "nrdp_sppy"
version = "0.2.13"
description = "Utility class for easier SharePoint interactions"
repository = "https://github.kp.org/AKME/nrdp_sppy"
authors = [{name = "max blasdel", email = "max.x.blasdel@kp.org"}]
readme = "README.md"
packages = [{include = "nrdp_sppy"}]
requires-python = ">=3.10,<4.0"
dependencies = [
"office365-rest-python-client>=2.5.12",
"polars>=1.0",
"requests>=2.32.3",
"xlsx2csv>=0.8.2",
"pip-system-certs>=4.0",
"fastexcel>=0.12.0",
"poetry-core (>=2.0.1,<3.0.0)"
]


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"